c/fitsio.h

    typedef __int64 LONGLONG;
    typedef long long LONGLONG;
    typedef __int64 LONGLONG;
    typedef long long LONGLONG;
#define FLEN_VALUE     71  
typedef struct      
{
    int filehandle;   
    int driver;       
    int open_count;   
    char *filename;   
    int validcode;    
    int only_one;     
    int noextsyntax;  
    LONGLONG filesize; 
    LONGLONG logfilesize; 
    int lasthdu;      
    LONGLONG bytepos; 
    LONGLONG io_pos;  
    int curbuf;        
    int curhdu;       
    int hdutype;      
    int writemode;    
    int maxhdu;       
    int MAXHDU;       
    LONGLONG *headstart; 
    LONGLONG headend;   
    LONGLONG ENDpos;    
    LONGLONG nextkey;   
    LONGLONG datastart; 
    int imgdim;         
    LONGLONG imgnaxis[99]; 
    int tfield;          
    int startcol;        
    LONGLONG origrows;   
    LONGLONG numrows;    
    LONGLONG rowlength;  
    tcolumn *tableptr;   
    LONGLONG heapstart;  
    LONGLONG heapsize;   
    int request_compress_type;  
    long request_tilesize[MAX_COMPRESS_DIM]; 
    float request_quantize_level;  
    int request_quantize_method ;  
    int request_dither_seed;     
    int request_lossy_int_compress; 
    int request_huge_hdu;          
    float request_hcomp_scale;     
    int request_hcomp_smooth;      
    int compress_type;      
    long tilesize[MAX_COMPRESS_DIM]; 
    float quantize_level;   
    int quantize_method;   
    int dither_seed;      
    int compressimg; 
    char zcmptype[12];      
    int zbitpix;            
    int zndim;              
    long znaxis[MAX_COMPRESS_DIM];  
    long maxtilelen;        
    long maxelem;	    
    int cn_compressed;	    
    int cn_uncompressed;    
    int cn_gzip_data;       
    int cn_zscale;	    
    int cn_zzero;	    
    int cn_zblank;          
    double zscale;          
    double zzero;           
    double cn_bscale;       
    double cn_bzero;        
    double cn_actual_bzero; 
    int zblank;             
    int rice_blocksize;     
    int rice_bytepix;       
    float hcomp_scale;      
    int hcomp_smooth;       
    int  *tilerow;          
    long *tiledatasize;     
    int *tiletype;          
    void **tiledata;        
    void **tilenullarray;   
    int *tileanynull;       
    char *iobuffer;         
    long bufrecnum[NIOBUF]; 
    int dirty[NIOBUF];     
    int ageindex[NIOBUF];    
} FITSfile;
typedef struct         
{
    int HDUposition;  
    FITSfile *Fptr;   
}fitsfile;
typedef struct  
{  
    fitsfile *fptr;     
    int      colnum;    
    char     colname[70]; 
    int      datatype;  
    int      iotype;    
    void     *array;    
    long     repeat;    
    long     tlmin;     
    long     tlmax;     
    char     tunit[70]; 
    char     tdisp[70]; 
} iteratorCol;
#define HEADER_NOT_EMPTY  201  
#define KEY_NO_EXIST      202  
#define KEY_OUT_BOUNDS    203  
#define VALUE_UNDEFINED   204  
#define NO_QUOTE          205  
#define BAD_INDEX_KEY     206  
#define BAD_KEYCHAR       207  
#define BAD_ORDER         208  
#define NOT_POS_INT       209  
#define NO_END            210  
#define BAD_BITPIX        211  
#define BAD_NAXIS         212  
#define BAD_NAXES         213  
#define BAD_PCOUNT        214  
#define BAD_GCOUNT        215  
#define BAD_TFIELDS       216  
#define NEG_WIDTH         217  
#define NEG_ROWS          218  
#define COL_NOT_FOUND     219  
#define BAD_SIMPLE        220  
#define NO_SIMPLE         221  
#define NO_BITPIX         222  
#define NO_NAXIS          223  
#define NO_NAXES          224  
#define NO_XTENSION       225  
#define NOT_ATABLE        226  
#define NOT_BTABLE        227  
#define NO_PCOUNT         228  
#define NO_GCOUNT         229  
#define NO_TFIELDS        230  
#define NO_TBCOL          231  
#define NO_TFORM          232  
#define NOT_IMAGE         233  
#define BAD_TBCOL         234  
#define NOT_TABLE         235  
#define COL_TOO_WIDE      236  
#define COL_NOT_UNIQUE    237  
#define BAD_ROW_WIDTH     241  
#define UNKNOWN_EXT       251  
#define UNKNOWN_REC       252  
#define END_JUNK          253  
#define BAD_HEADER_FILL   254  
#define BAD_DATA_FILL     255  
#define BAD_TFORM         261  
#define BAD_TFORM_DTYPE   262  
#define BAD_TDIM          263  
#define BAD_HEAP_PTR      264  
#define BAD_HDU_NUM       301  
#define BAD_COL_NUM       302  
#define NEG_FILE_POS      304  
#define NEG_BYTES         306  
#define BAD_ROW_NUM       307  
#define BAD_ELEM_NUM      308  
#define NOT_ASCII_COL     309  
#define NOT_LOGICAL_COL   310  
#define BAD_ATABLE_FORMAT 311  
#define BAD_BTABLE_FORMAT 312  
#define NO_NULL           314  
#define NOT_VARI_LEN      317  
#define BAD_DIMEN         320  
#define BAD_PIX_NUM       321  
#define ZERO_SCALE        322  
#define NEG_AXIS          323  
#define NOT_GROUP_TABLE         340
#define HDU_ALREADY_MEMBER      341
#define MEMBER_NOT_FOUND        342
#define GROUP_NOT_FOUND         343
#define BAD_GROUP_ID            344
#define TOO_MANY_HDUS_TRACKED   345
#define HDU_ALREADY_TRACKED     346
#define BAD_OPTION              347
#define IDENTICAL_POINTERS      348
#define BAD_GROUP_ATTACH        349
#define BAD_GROUP_DETACH        350
#define BAD_I2C           401  
#define BAD_F2C           402  
#define BAD_INTKEY        403  
#define BAD_LOGICALKEY    404  
#define BAD_FLOATKEY      405  
#define BAD_DOUBLEKEY     406  
#define BAD_C2I           407  
#define BAD_C2F           408  
#define BAD_C2D           409  
#define BAD_DATATYPE      410  
#define BAD_DECIM         411  
#define NUM_OVERFLOW      412  
# define DATA_COMPRESSION_ERR 413  
# define DATA_DECOMPRESSION_ERR 414 
# define NO_COMPRESSED_TILE  415 
#define BAD_DATE          420  
#define PARSE_SYNTAX_ERR  431  
#define PARSE_BAD_TYPE    432  
#define PARSE_LRG_VECTOR  433  
#define PARSE_NO_OUTPUT   434  
#define PARSE_BAD_COL     435  
#define PARSE_BAD_OUTPUT  436  
#define ANGLE_TOO_BIG     501  
#define BAD_WCS_VAL       502  
#define WCS_ERROR         503  
#define BAD_WCS_PROJ      504  
#define NO_WCS_KEY        505  
#define APPROX_WCS_KEY    506  
#define NO_CLOSE_ERROR    999  
#define	NGP_ERRBASE		(360)			
#define	NGP_OK			(0)
#define	NGP_NO_MEMORY		(NGP_ERRBASE + 0)	
#define	NGP_READ_ERR		(NGP_ERRBASE + 1)	
#define	NGP_NUL_PTR		(NGP_ERRBASE + 2)	
#define	NGP_EMPTY_CURLINE	(NGP_ERRBASE + 3)	
#define	NGP_UNREAD_QUEUE_FULL	(NGP_ERRBASE + 4)	
#define	NGP_INC_NESTING		(NGP_ERRBASE + 5)	
#define	NGP_ERR_FOPEN		(NGP_ERRBASE + 6)	
#define	NGP_EOF			(NGP_ERRBASE + 7)	
#define	NGP_BAD_ARG		(NGP_ERRBASE + 8)	
#define	NGP_TOKEN_NOT_EXPECT	(NGP_ERRBASE + 9)	
int CFITS2Unit( fitsfile *fptr );
CFITS_API fitsfile* CUnit2FITS(int unit);
int CFITS_API fits_get_token (char **ptr, char *delimiter, char *token, int *isanumber);
int CFITS_API fits_get_token2(char **ptr, char *delimiter, char **token, int *isanumber, int *status);
char  CFITS_API *fits_split_names(char *list);
int CFITS_API ffiurl(  char *url,  char *urltype, char *infile,
                    char *outfile, char *extspec, char *rowfilter,
                    char *binspec, char *colspec, int *status);
int CFITS_API ffifile (char *url,  char *urltype, char *infile,
                    char *outfile, char *extspec, char *rowfilter,
                    char *binspec, char *colspec, char *pixfilter, int *status);
int CFITS_API ffifile2 (char *url,  char *urltype, char *infile,
                    char *outfile, char *extspec, char *rowfilter,
                    char *binspec, char *colspec, char *pixfilter, char *compspec, int *status);
int CFITS_API ffrtnm(char *url, char *rootname, int *status);
int CFITS_API ffexist(const char *infile, int *exists, int *status);
int CFITS_API ffexts(char *extspec, int *extnum,  char *extname, int *extvers,
          int *hdutype, char *colname, char *rowexpress, int *status);
int CFITS_API ffextn(char *url, int *extension_num, int *status);
int CFITS_API ffurlt(fitsfile *fptr, char *urlType, int *status);
int CFITS_API ffbins(char *binspec, int *imagetype, int *haxis, 
                      char colname[4][FLEN_VALUE], double *minin,
                      double *maxin, double *binsizein,
                      char minname[4][FLEN_VALUE], char maxname[4][FLEN_VALUE],
                      char binname[4][FLEN_VALUE], double *weight, char *wtname,
                      int *recip, int *status);
int CFITS_API ffbinr(char **binspec, char *colname, double *minin, 
                        double *maxin, double *binsizein, char *minname,
                        char *maxname, char *binname, int *status);
int CFITS_API fits_copy_cell2image(fitsfile *fptr, fitsfile *newptr, char *colname,
                      long rownum, int *status);
int CFITS_API fits_copy_image2cell(fitsfile *fptr, fitsfile *newptr, char *colname,
                      long rownum, int copykeyflag, int *status);
int CFITS_API fits_copy_pixlist2image(fitsfile *infptr, fitsfile *outfptr, int firstkey,       
           int naxis, int *colnum, int *status);
int CFITS_API ffimport_file( char *filename, char **contents, int *status );
int CFITS_API ffrwrg( char *rowlist, LONGLONG maxrows, int maxranges, int *numranges,
      long *minrow, long *maxrow, int *status);
int CFITS_API ffrwrgll( char *rowlist, LONGLONG maxrows, int maxranges, int *numranges,
      LONGLONG *minrow, LONGLONG *maxrow, int *status);
int CFITS_API fits_init_cfitsio(void);
int CFITS_API ffomem(fitsfile **fptr, const char *name, int mode, void **buffptr,
           size_t *buffsize, size_t deltasize,
           void *(*mem_realloc)(void *p, size_t newsize),
           int *status);
int CFITS_API ffopen(fitsfile **fptr, const char *filename, int iomode, int *status);
int CFITS_API ffopentest(int soname, fitsfile **fptr, const char *filename, int iomode, int *status);
int CFITS_API ffdopn(fitsfile **fptr, const char *filename, int iomode, int *status);
int CFITS_API ffeopn(fitsfile **fptr, const char *filename, int iomode, 
     char *extlist, int *hdutype, int *status);
int CFITS_API fftopn(fitsfile **fptr, const char *filename, int iomode, int *status);
int CFITS_API ffiopn(fitsfile **fptr, const char *filename, int iomode, int *status);
int CFITS_API ffdkopn(fitsfile **fptr, const char *filename, int iomode, int *status);
int CFITS_API ffreopen(fitsfile *openfptr, fitsfile **newfptr, int *status);
int CFITS_API ffinit(  fitsfile **fptr, const char *filename, int *status);
int CFITS_API ffdkinit(fitsfile **fptr, const char *filename, int *status);
int CFITS_API ffimem(fitsfile **fptr,  void **buffptr,
           size_t *buffsize, size_t deltasize,
           void *(*mem_realloc)(void *p, size_t newsize),
           int *status);
int CFITS_API fftplt(fitsfile **fptr, const char *filename, const char *tempname,
           int *status);
int CFITS_API ffflus(fitsfile *fptr, int *status);
int CFITS_API ffflsh(fitsfile *fptr, int clearbuf, int *status);
int CFITS_API ffclos(fitsfile *fptr, int *status);
int CFITS_API ffdelt(fitsfile *fptr, int *status);
int CFITS_API ffflnm(fitsfile *fptr, char *filename, int *status);
int CFITS_API ffflmd(fitsfile *fptr, int *filemode, int *status);
int CFITS_API fits_delete_iraf_file(const char *filename, int *status);
int CFITS_API ffiter(int ncols,  iteratorCol *data, long offset, long nPerLoop,
           int (*workFn)( long totaln, long offset, long firstn,
             long nvalues, int narrays, iteratorCol *data, void *userPointer),
           void *userPointer, int *status);