source/fitsio.d


enum HEADER_NOT_EMPTY = 201; /* header already contains keywords */
enum KEY_NO_EXIST = 202; /* keyword not found in header */
enum KEY_OUT_BOUNDS = 203; /* keyword record number is out of bounds */
enum VALUE_UNDEFINED = 204; /* keyword value field is blank */
enum NO_QUOTE = 205; /* string is missing the closing quote */
enum BAD_INDEX_KEY = 206; /* illegal indexed keyword name */
enum BAD_KEYCHAR = 207; /* illegal character in keyword name or card */
enum BAD_ORDER = 208; /* required keywords out of order */
enum NOT_POS_INT = 209; /* keyword value is not a positive integer */
enum NO_END = 210; /* couldn't find END keyword */
enum BAD_BITPIX = 211; /* illegal BITPIX keyword value*/
enum BAD_NAXIS = 212; /* illegal NAXIS keyword value */
enum BAD_NAXES = 213; /* illegal NAXISn keyword value */
enum BAD_PCOUNT = 214; /* illegal PCOUNT keyword value */
enum BAD_GCOUNT = 215; /* illegal GCOUNT keyword value */
enum BAD_TFIELDS = 216; /* illegal TFIELDS keyword value */
enum NEG_WIDTH = 217; /* negative table row size */
enum NEG_ROWS = 218; /* negative number of rows in table */
enum COL_NOT_FOUND = 219; /* column with this name not found in table */
enum BAD_SIMPLE = 220; /* illegal value of SIMPLE keyword  */
enum NO_SIMPLE = 221; /* Primary array doesn't start with SIMPLE */
enum NO_BITPIX = 222; /* Second keyword not BITPIX */
enum NO_NAXIS = 223; /* Third keyword not NAXIS */
enum NO_NAXES = 224; /* Couldn't find all the NAXISn keywords */
enum NO_XTENSION = 225; /* HDU doesn't start with XTENSION keyword */
enum NOT_ATABLE = 226; /* the CHDU is not an ASCII table extension */
enum NOT_BTABLE = 227; /* the CHDU is not a binary table extension */
enum NO_PCOUNT = 228; /* couldn't find PCOUNT keyword */
enum NO_GCOUNT = 229; /* couldn't find GCOUNT keyword */
enum NO_TFIELDS = 230; /* couldn't find TFIELDS keyword */
enum NO_TBCOL = 231; /* couldn't find TBCOLn keyword */
enum NO_TFORM = 232; /* couldn't find TFORMn keyword */
enum NOT_IMAGE = 233; /* the CHDU is not an IMAGE extension */
enum BAD_TBCOL = 234; /* TBCOLn keyword value < 0 or > rowlength */
enum NOT_TABLE = 235; /* the CHDU is not a table */
enum COL_TOO_WIDE = 236; /* column is too wide to fit in table */
enum COL_NOT_UNIQUE = 237; /* more than 1 column name matches template */
enum BAD_ROW_WIDTH = 241; /* sum of column widths not = NAXIS1 */
enum UNKNOWN_EXT = 251; /* unrecognizable FITS extension type */
enum UNKNOWN_REC = 252; /* unrecognizable FITS record */
enum END_JUNK = 253; /* END keyword is not blank */
enum BAD_HEADER_FILL = 254; /* Header fill area not blank */
enum BAD_DATA_FILL = 255; /* Data fill area not blank or zero */
enum BAD_TFORM = 261; /* illegal TFORM format code */
enum BAD_TFORM_DTYPE = 262; /* unrecognizable TFORM datatype code */
enum BAD_TDIM = 263; /* illegal TDIMn keyword value */
enum BAD_HEAP_PTR = 264; /* invalid BINTABLE heap address */

enum BAD_HDU_NUM = 301; /* HDU number < 1 or > MAXHDU */
enum BAD_COL_NUM = 302; /* column number < 1 or > tfields */
enum NEG_FILE_POS = 304; /* tried to move before beginning of file  */
enum NEG_BYTES = 306; /* tried to read or write negative bytes */
enum BAD_ROW_NUM = 307; /* illegal starting row number in table */
enum BAD_ELEM_NUM = 308; /* illegal starting element number in vector */
enum NOT_ASCII_COL = 309; /* this is not an ASCII string column */
enum NOT_LOGICAL_COL = 310; /* this is not a logical datatype column */
enum BAD_ATABLE_FORMAT = 311; /* ASCII table column has wrong format */
enum BAD_BTABLE_FORMAT = 312; /* Binary table column has wrong format */
enum NO_NULL = 314; /* null value has not been defined */
enum NOT_VARI_LEN = 317; /* this is not a variable length column */
enum BAD_DIMEN = 320; /* illegal number of dimensions in array */
enum BAD_PIX_NUM = 321; /* first pixel number greater than last pixel */
enum ZERO_SCALE = 322; /* illegal BSCALE or TSCALn keyword = 0 */
enum NEG_AXIS = 323; /* illegal axis length < 1 */

enum NOT_GROUP_TABLE = 340;
enum HDU_ALREADY_MEMBER = 341;
enum MEMBER_NOT_FOUND = 342;
enum GROUP_NOT_FOUND = 343;
enum BAD_GROUP_ID = 344;
enum TOO_MANY_HDUS_TRACKED = 345;
enum HDU_ALREADY_TRACKED = 346;
enum BAD_OPTION = 347;
enum IDENTICAL_POINTERS = 348;
enum BAD_GROUP_ATTACH = 349;
enum BAD_GROUP_DETACH = 350;

enum BAD_I2C = 401; /* bad int to formatted string conversion */
enum BAD_F2C = 402; /* bad float to formatted string conversion */
enum BAD_INTKEY = 403; /* can't interprete keyword value as integer */
enum BAD_LOGICALKEY = 404; /* can't interprete keyword value as logical */
enum BAD_FLOATKEY = 405; /* can't interprete keyword value as float */
enum BAD_DOUBLEKEY = 406; /* can't interprete keyword value as double */
enum BAD_C2I = 407; /* bad formatted string to int conversion */
enum BAD_C2F = 408; /* bad formatted string to float conversion */
enum BAD_C2D = 409; /* bad formatted string to double conversion */
enum BAD_DATATYPE = 410; /* bad keyword datatype code */
enum BAD_DECIM = 411; /* bad number of decimal places specified */
enum NUM_OVERFLOW = 412; /* overflow during datatype conversion */

enum DATA_COMPRESSION_ERR = 413; /* error in imcompress routines */
enum DATA_DECOMPRESSION_ERR = 414; /* error in imcompress routines */
enum NO_COMPRESSED_TILE = 415; /* compressed tile doesn't exist */

enum BAD_DATE = 420; /* error in date or time conversion */

enum PARSE_SYNTAX_ERR = 431; /* syntax error in parser expression */
enum PARSE_BAD_TYPE = 432; /* expression did not evaluate to desired type */
enum PARSE_LRG_VECTOR = 433; /* vector result too large to return in array */
enum PARSE_NO_OUTPUT = 434; /* data parser failed not sent an out column */
enum PARSE_BAD_COL = 435; /* bad data encounter while parsing column */
enum PARSE_BAD_OUTPUT = 436; /* Output file not of proper type          */

enum ANGLE_TOO_BIG = 501; /* celestial angle too large for projection */
enum BAD_WCS_VAL = 502; /* bad celestial coordinate or pixel value */
enum WCS_ERROR = 503; /* error in celestial coordinate calculation */
enum BAD_WCS_PROJ = 504; /* unsupported type of celestial projection */
enum NO_WCS_KEY = 505; /* celestial coordinate keywords not found */
enum APPROX_WCS_KEY = 506; /* approximate WCS keywords were calculated */

enum NO_CLOSE_ERROR = 999; /* special value used internally to switch off */
/* the error message from ffclos and ffchdu */

/*------- following error codes are used in the grparser.c file -----------*/
enum NGP_ERRBASE = 360; /* base chosen so not to interfere with CFITSIO */
enum NGP_OK = 0;
enum NGP_NO_MEMORY = NGP_ERRBASE + 0; /* malloc failed */
enum NGP_READ_ERR = NGP_ERRBASE + 1; /* read error from file */
enum NGP_NUL_PTR = NGP_ERRBASE + 2; /* null pointer passed as argument */
enum NGP_EMPTY_CURLINE = NGP_ERRBASE + 3; /* line read seems to be empty */
enum NGP_UNREAD_QUEUE_FULL = NGP_ERRBASE + 4; /* cannot unread more then 1 line (or single line twice) */
enum NGP_INC_NESTING = NGP_ERRBASE + 5; /* too deep include file nesting (inf. loop ?) */
enum NGP_ERR_FOPEN = NGP_ERRBASE + 6; /* fopen() failed, cannot open file */
enum NGP_EOF = NGP_ERRBASE + 7; /* end of file encountered */
enum NGP_BAD_ARG = NGP_ERRBASE + 8; /* bad arguments passed */
enum NGP_TOKEN_NOT_EXPECT = NGP_ERRBASE + 9; /* token not expected here */

/*  The following exclusion if __CINT__ is defined is needed for ROOT */

/*  the following 3 lines are needed to support C++ compilers */

int CFITS2Unit (fitsfile* fptr);
fitsfile* CUnit2FITS (int unit);

/*----------------  FITS file URL parsing routines -------------*/
int fits_get_token (char** ptr, char* delimiter, char* token, int* isanumber);
int fits_get_token2 (char** ptr, char* delimiter, char** token, int* isanumber, int* status);
char* fits_split_names (char* list);
int ffiurl (
    char* url,
    char* urltype,
    char* infile,
    char* outfile,
    char* extspec,
    char* rowfilter,
    char* binspec,
    char* colspec,
    int* status);
int ffifile (
    char* url,
    char* urltype,
    char* infile,
    char* outfile,
    char* extspec,
    char* rowfilter,
    char* binspec,
    char* colspec,
    char* pixfilter,
    int* status);
int ffifile2 (
    char* url,
    char* urltype,
    char* infile,
    char* outfile,
    char* extspec,
    char* rowfilter,
    char* binspec,
    char* colspec,
    char* pixfilter,
    char* compspec,
    int* status);
int ffrtnm (char* url, char* rootname, int* status);
int ffexist (const(char)* infile, int* exists, int* status);
int ffexts (
    char* extspec,
    int* extnum,
    char* extname,
    int* extvers,
    int* hdutype,
    char* colname,
    char* rowexpress,
    int* status);
int ffextn (char* url, int* extension_num, int* status);
int ffurlt (fitsfile* fptr, char* urlType, int* status);
int ffbins (
    char* binspec,
    int* imagetype,
    int* haxis,
    ref char[FLEN_VALUE][4] colname,
    double* minin,
    double* maxin,
    double* binsizein,
    ref char[FLEN_VALUE][4] minname,
    ref char[FLEN_VALUE][4] maxname,
    ref char[FLEN_VALUE][4] binname,
    double* weight,
    char* wtname,
    int* recip,
    int* status);
int ffbinr (
    char** binspec,
    char* colname,
    double* minin,
    double* maxin,
    double* binsizein,
    char* minname,
    char* maxname,
    char* binname,
    int* status);
int fits_copy_cell2image (
    fitsfile* fptr,
    fitsfile* newptr,
    char* colname,
    c_long rownum,
    int* status);
int fits_copy_image2cell (
    fitsfile* fptr,
    fitsfile* newptr,
    char* colname,
    c_long rownum,
    int copykeyflag,
    int* status); /* I - first HDU record number to start with */
int fits_copy_pixlist2image (
    fitsfile* infptr,
    fitsfile* outfptr,
    int firstkey,
    int naxis,
    int* colnum,
    int* status);
int ffimport_file (char* filename, char** contents, int* status);
int ffrwrg (
    char* rowlist,
    LONGLONG maxrows,
    int maxranges,
    int* numranges,
    c_long* minrow,
    c_long* maxrow,
    int* status);
int ffrwrgll (
    char* rowlist,
    LONGLONG maxrows,
    int maxranges,
    int* numranges,
    LONGLONG* minrow,
    LONGLONG* maxrow,
    int* status);
/*----------------  FITS file I/O routines -------------*/
int fits_init_cfitsio ();
int ffomem (
    fitsfile** fptr,
    const(char)* name,
    int mode,
    void** buffptr,
    size_t* buffsize,
    size_t deltasize,
    void* function (void* p, size_t newsize) mem_realloc,
    int* status);
int ffopen (fitsfile** fptr, const(char)* filename, int iomode, int* status);
int ffopentest (int soname, fitsfile** fptr, const(char)* filename, int iomode, int* status);

int ffdopn (fitsfile** fptr, const(char)* filename, int iomode, int* status);
int ffeopn (
    fitsfile** fptr,
    const(char)* filename,
    int iomode,
    char* extlist,
    int* hdutype,
    int* status);
int fftopn (fitsfile** fptr, const(char)* filename, int iomode, int* status);
int ffiopn (fitsfile** fptr, const(char)* filename, int iomode, int* status);
int ffdkopn (fitsfile** fptr, const(char)* filename, int iomode, int* status);
int ffreopen (fitsfile* openfptr, fitsfile** newfptr, int* status);
int ffinit (fitsfile** fptr, const(char)* filename, int* status);
int ffdkinit (fitsfile** fptr, const(char)* filename, int* status);
int ffimem (
    fitsfile** fptr,
    void** buffptr,
    size_t* buffsize,
    size_t deltasize,
    void* function (void* p, size_t newsize) mem_realloc,
    int* status);
int fftplt (
    fitsfile** fptr,
    const(char)* filename,
    const(char)* tempname,
    int* status);
int ffflus (fitsfile* fptr, int* status);
int ffflsh (fitsfile* fptr, int clearbuf, int* status);
int ffclos (fitsfile* fptr, int* status);
int ffdelt (fitsfile* fptr, int* status);
int ffflnm (fitsfile* fptr, char* filename, int* status);
int ffflmd (fitsfile* fptr, int* filemode, int* status);
int fits_delete_iraf_file (const(char)* filename, int* status);

/*---------------- utility routines -------------*/
